[gd_scene load_steps=41 format=2]

[ext_resource path="res://cenas/jogador1/jogador1.gd" type="Script" id=1]
[ext_resource path="res://recursos/Medieval King Pack 2/Sprites/Run.png" type="Texture" id=2]
[ext_resource path="res://recursos/Medieval King Pack 2/Sprites/Attack1.png" type="Texture" id=3]
[ext_resource path="res://recursos/Medieval King Pack 2/Sprites/Idle.png" type="Texture" id=4]
[ext_resource path="res://recursos/Medieval King Pack 2/Sprites/Jump.png" type="Texture" id=5]
[ext_resource path="res://recursos/Medieval King Pack 2/voice1.wav" type="AudioStream" id=6]
[ext_resource path="res://recursos/Medieval King Pack 2/Sprites/Death.png" type="Texture" id=7]
[ext_resource path="res://recursos/Medieval King Pack 2/Sprites/Take Hit - white silhouette.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 480, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 800, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 960, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1120, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1120, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 160, 111 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 800, 0, 160, 111 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "atacando",
"speed": 7.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "correndo",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": false,
"name": "pulando",
"speed": 7.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "recebendo_dano",
"speed": 7.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "morrendo",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 12.6544, 27.1684 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 26.2795, 17.7988 )

[node name="Jogador1" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 30 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.27032, 23.0814 )
shape = SubResource( 31 )

[node name="AtaqueJ1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AtaqueJ1"]
position = Vector2( 44.7845, 24.0814 )
shape = SubResource( 32 )
disabled = true

[node name="AudioAtaqueJ1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="AtaqueJ1" to="." method="_on_AtaqueJ1_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
